UI: Whitespace fixes and minor touches to the new match button.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,16 +1,17 @@
 h1 {
   font-weight: 300;
   text-align: center;
+  margin: 10px;
 }
 
 .bay {
-  margin-top: 10px;
+  margin-top: 20px;
   height: 40px;
   text-align: center;
 }
 
 .button-new-match {
-  margin-top: 10px;
+  width: 76%;
 }
 
 .players {
